--- a/notebooks/00_environment_and_conventions.ipynb
+++ b/notebooks/00_environment_and_conventions.ipynb
@@ -50,13 +50,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IyjLqJ57DpeV",
-        "outputId": "c6e5ede2-7214-40e0-9995-cb29f753355f"
+        "outputId": "da07ad17-d3e1-47d9-c163-18b9966035d6"
       },
       "outputs": [
         {
@@ -67,12 +67,12 @@
             "Existing repository 'Interactive_Portfolio_Optimization' removed.\n",
             "Cloning 'Interactive_Portfolio_Optimization' repository from https://github.com/basarr/interactive_portfolio_optimization...\n",
             "Cloning into '/content/Interactive_Portfolio_Optimization'...\n",
-            "remote: Enumerating objects: 47, done.\u001b[K\n",
-            "remote: Counting objects: 100% (47/47), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (41/41), done.\u001b[K\n",
-            "remote: Total 47 (delta 4), reused 47 (delta 4), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (47/47), 31.75 KiB | 4.54 MiB/s, done.\n",
-            "Resolving deltas: 100% (4/4), done.\n",
+            "remote: Enumerating objects: 51, done.\u001b[K\n",
+            "remote: Counting objects: 100% (51/51), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
+            "remote: Total 51 (delta 7), reused 44 (delta 4), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (51/51), 36.19 KiB | 2.78 MiB/s, done.\n",
+            "Resolving deltas: 100% (7/7), done.\n",
             "Repository 'Interactive_Portfolio_Optimization' cloned successfully to /content/Interactive_Portfolio_Optimization\n",
             "numpy 2.0.2\n",
             "pandas 2.2.2\n",
@@ -85,17 +85,16 @@
       "source": [
         "from pathlib import Path\n",
         "import sys\n",
-        "import shutil # Import shutil for robust directory removal\n",
+        "import shutil\n",
         "\n",
-        "# Define the expected repository name and URL for your project.\n",
-        "# Please replace 'ml-finance-project' and the URL with your actual project details.\n",
-        "REPO_NAME = 'Interactive_Portfolio_Optimization' # e.g., 'your-project-repo'\n",
+        "\n",
+        "REPO_NAME = 'Interactive_Portfolio_Optimization'\n",
         "REPO_URL = 'https://github.com/basarr/interactive_portfolio_optimization'\n",
         "\n",
-        "# Define the expected path for the cloned repository in Colab\n",
+        "\n",
         "repo_path = Path('/content') / REPO_NAME\n",
         "\n",
-        "# Check if the repository already exists. If so, remove it to ensure a clean clone.\n",
+        "# sanity check\n",
         "if repo_path.exists():\n",
         "    print(f\"Removing existing repository '{REPO_NAME}' at {repo_path}...\")\n",
         "    shutil.rmtree(repo_path)\n",
@@ -103,31 +102,30 @@
         "\n",
         "print(f\"Cloning '{REPO_NAME}' repository from {REPO_URL}...\")\n",
         "try:\n",
-        "    # Execute git clone command using IPython's system function, ensuring path with spaces is quoted\n",
+        "\n",
         "    get_ipython().system(f'git clone {REPO_URL} \"{repo_path}\"')\n",
         "    print(f\"Repository '{REPO_NAME}' cloned successfully to {repo_path}\")\n",
         "except Exception as e:\n",
         "    print(f\"Error cloning repository: {e}\")\n",
         "    print(\"Please ensure the REPO_URL is correct and the repository is publicly accessible or you are authenticated.\")\n",
-        "    # Fallback to current working directory if cloning fails, likely leading to ModuleNotFoundError\n",
+        "    # Fallback\n",
         "    ROOT = Path.cwd()\n",
         "    if not (ROOT / 'src').exists():\n",
         "        ROOT = ROOT.parent\n",
         "    print(f\"Falling back to original ROOT detection: {ROOT}. This might still result in ModuleNotFoundError if 'src' is not directly present.\")\n",
         "\n",
-        "# Set ROOT to the cloned repository path (or fallback if cloning failed)\n",
         "ROOT = repo_path\n",
         "\n",
-        "# Ensure the project root is in sys.path so Python can find the 'src' module\n",
+        "# Ensure the project root is in sys.path\n",
         "if str(ROOT) not in sys.path:\n",
-        "    sys.path.insert(0, str(ROOT)) # Insert at the beginning for higher import priority\n",
+        "    sys.path.insert(0, str(ROOT))\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib\n",
         "import scipy\n",
         "\n",
-        "# These imports now rely on 'ROOT' being correctly set and added to sys.path\n",
+        "\n",
         "from src.config import config_dict\n",
         "from src.utils import ensure_dirs, set_seed\n",
         "from src.black_scholes import bs_call_price\n",
