--- a/notebooks/01_binomial_pricing_and_replication.ipynb
+++ b/notebooks/01_binomial_pricing_and_replication.ipynb
@@ -28,7 +28,7 @@
         }
       },
       "id": "fOeb7nlvH5Oz",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +65,7 @@
         }
       },
       "id": "rv-2C4ZIH8Sx",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         }
       },
       "id": "FJgxpxoQHeFL",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "hWJlR-N4HMEf"
       },
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "jbltZw85HMEg",
         "outputId": "3a227cb0-ef57-4bbe-8c5b-af39a27e8f9a",
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "Lp2oEjtfHMEg",
         "outputId": "427d6abb-3fff-4542-8092-97ebf24f337f",
@@ -471,6 +471,50 @@
         "conv\n"
       ],
       "id": "Lp2oEjtfHMEg"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Summary\n",
+        "\n",
+        "We implemented European option pricing using the Cox–Ross–Rubinstein (CRR) binomial tree and linked dynamic replication to risk-neutral valuation.\n",
+        "\n",
+        "For each time step $\\Delta t = T / N$, the up and down multipliers are given by:\n",
+        "\n",
+        "$u = e^{\\sigma \\sqrt{\\Delta t}}$,\n",
+        "$d = 1 / u$,\n",
+        "\n",
+        "and the risk-neutral probability is\n",
+        "$p = \\dfrac{e^{(r - q)\\Delta t} - d}{u - d}$.\n",
+        "\n",
+        "At maturity, option values are given by terminal payoffs:\n",
+        "\n",
+        "call $= \\max(S_T - K, 0)$,\n",
+        "\n",
+        "put $= \\max(K - S_T, 0)$.\n",
+        "\n",
+        "Backward induction is performed via the risk-neutral pricing equation:\n",
+        "$V = e^{-r \\Delta t}\\big(p V_u + (1 - p) V_d\\big)$.\n",
+        "\n",
+        "We also computed one-step replication at each node. The hedge ratio (delta) is\n",
+        "$\\Delta = \\dfrac{V_u - V_d}{S_u - S_d}$,\n",
+        "\n",
+        "and the bond position is\n",
+        "$B = e^{-r \\Delta t}\\big(V_u - \\Delta S_u\\big)$.\n",
+        "\n",
+        "The option value at each node satisfies the replication identity\n",
+        "$V = \\Delta S + B$.\n",
+        "\n",
+        "Key takeaways:\n",
+        "\n",
+        "1.\tThe replication value at the root matched the binomial tree price, with numerical error $\\approx 0$.\n",
+        "2.\tAs $N$ increased, binomial prices converged to the Black–Scholes value.\n",
+        "3.\tConvergence tables and node-level $\\Delta$ visualizations were saved."
+      ],
+      "metadata": {
+        "id": "lJ67DehwNkwF"
+      },
+      "id": "lJ67DehwNkwF"
     }
   ],
   "metadata": {
