--- a/notebooks/04_pde_finite_difference_pricing.ipynb
+++ b/notebooks/04_pde_finite_difference_pricing.ipynb
@@ -21,11 +21,11 @@
         "!ls /content/interactive_portfolio_optimization\n"
       ],
       "metadata": {
-        "id": "fpaUUQyAO6Ff",
-        "outputId": "025f7faf-4693-4366-cccd-7958eb42389f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fpaUUQyAO6Ff",
+        "outputId": "025f7faf-4693-4366-cccd-7958eb42389f"
       },
       "id": "fpaUUQyAO6Ff",
       "execution_count": 10,
@@ -55,11 +55,11 @@
         "print((Path(\"/content/interactive_portfolio_optimization/pyproject.toml\")).exists())\n"
       ],
       "metadata": {
-        "id": "NYiL-iRoO7qJ",
-        "outputId": "2e25a297-e01b-4c29-c4ce-8c242f65fe85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NYiL-iRoO7qJ",
+        "outputId": "2e25a297-e01b-4c29-c4ce-8c242f65fe85"
       },
       "id": "NYiL-iRoO7qJ",
       "execution_count": 11,
@@ -86,11 +86,11 @@
         "print(\"ROOT OK:\", ROOT)\n"
       ],
       "metadata": {
-        "id": "Jlcz1-n1O9Z_",
-        "outputId": "2a566a7f-a90d-4e62-9868-9373633e9830",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jlcz1-n1O9Z_",
+        "outputId": "2a566a7f-a90d-4e62-9868-9373633e9830"
       },
       "id": "Jlcz1-n1O9Z_",
       "execution_count": 12,
@@ -108,11 +108,11 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "id": "0VTwL4-FOop4",
-        "outputId": "708de761-d12f-42d6-9f5a-48074cca5002",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0VTwL4-FOop4",
+        "outputId": "708de761-d12f-42d6-9f5a-48074cca5002"
       },
       "outputs": [
         {
@@ -163,11 +163,11 @@
         "print(\"imports + cfg ready\")\n"
       ],
       "metadata": {
-        "id": "drPw2a1zPEXB",
-        "outputId": "97d59b75-75b0-463c-db1f-1f464d5b4c2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "drPw2a1zPEXB",
+        "outputId": "97d59b75-75b0-463c-db1f-1f464d5b4c2a"
       },
       "id": "drPw2a1zPEXB",
       "execution_count": 15,
@@ -185,12 +185,12 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "mqY6z1jGOop4",
-        "outputId": "c33896c0-cab3-4511-a883-e74553b2f2fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        }
+        },
+        "id": "mqY6z1jGOop4",
+        "outputId": "c33896c0-cab3-4511-a883-e74553b2f2fe"
       },
       "outputs": [
         {
@@ -484,7 +484,8 @@
         "\n",
         "•\tThe monotone drop in $|V_{\\text{PDE}}-V_{\\text{BS}}|$ is consistent with numerical convergence of the discretization toward the analytic benchmark.\n",
         "\n",
-        "Practical takeaway\n",
+        "Practical takeaways:\n",
+        "\n",
         "•\tCoarse grids (small $M,N$) are fast but can produce noticeable numerical error.\n",
         "\n",
         "•\tModerate/fine grids give prices close to the benchmark, with the remaining gap dominated by discretization plus boundary truncation effects from solving on $S \\in [0,S_{\\max}]$ instead of $(0,\\infty)$.\n",
